--- a/bib_aliases.tex
+++ b/bib_aliases.tex
@@ -7,7 +7,7 @@
 \def\AlicePaper{Aamodt:2008zz}
 \def\CMSPaper{Chatrchyan:2008aa}
 \def\AugerPaper{ThePierreAuger:2015rma}
-
+\def\KASCADEGrandePaper{Apel:2010zz}
 
 %%MODELS
 \def\QGSJetPaper{Ostapchenko:2010vb}
