--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,17 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Apel:2010zz,
+      author         = "Apel, W. D. and others",
+      title          = "{The KASCADE-Grande experiment}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A620",
+      year           = "2010",
+      pages          = "202-216",
+      doi            = "10.1016/j.nima.2010.03.147",
+      SLACcitation   = "%%CITATION = NUIMA,A620,202;%%"
+}
+
 @article{Maris:2009uc,
       author         = "Maris, Ioana C. and Engel, R. and Garrido, X. and Haungs,
                         A. and Roth, M. and Ulrich, R. and Unger, M.",
@@ -1245,6 +1256,19 @@ year = {1968}
 %%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% PROCEEDINGS %%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
+
+@inproceedings{VitorICRC2017,
+      author         = "de Souza, V.",
+      title          = "{Testing the agreement between the \xmax
+                         distributions measured by the Pierre Auger and
+                         Telescope Array Observatories}",
+      booktitle      = "{Proceedings,  35th International Cosmic Ray Conference
+                        (ICRC 2017): Bexco, Busan, Korea, July 12-20, 2017}",
+      collaboration  = "Pierre Auger Observatory and Telescope Array",
+      year           = "2017"
+}
+   
+
 
 @inproceedings{Prado:2017hub,
       author         = "Prado, Raul R.",
