--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -60,6 +60,7 @@
 \newcommand{\CRMC}{{\scshape CRMC}\xspace}
 \newcommand{\Mooca}{{\scshape Mooca}\xspace}
 \newcommand{\Aires}{{\scshape Aires}\xspace}
+\newcommand{\EGS}{{\scshape EGS4}\xspace}
 \newcommand{\Venus}{{\scshape Venus}\xspace}
 \newcommand{\VenusLong}{{\scshape Venus\,4.12}\xspace}
 \newcommand{\GiBUU}{{\scshape GiBUU}\xspace}
@@ -100,6 +101,7 @@
 \newcommand{\nmumean}{\ensuremath{\mbox{$\langle N_\mu\rangle$}}\xspace}
 \newcommand{\xmax}{\ensuremath{\mbox{$X_\text{max}$}}\xspace}
 \newcommand{\xmaxmean}{\ensuremath{\mbox{$\langle X_\text{max}\rangle$}}\xspace}
+\newcommand{\xmaxsig}{\ensuremath{\mbox{$\sigma[X_\text{max}]$}}\xspace}
 \newcommand{\xmumax}{\ensuremath{\mbox{$X^\mu_\text{max}$}}\xspace}
 \newcommand{\xmumaxmean}{\ensuremath{\mbox{$\langle X^\mu_\text{max}\rangle$}}\xspace}
 \newcommand{\dEdX}{\ensuremath{\mbox{\text{d}$E$/\text{d}$X$}}\xspace}
