--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,44 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Patterson:1983qj,
+      author         = "Patterson, John R. and Hillas, A. M.",
+      title          = "{THE RELATION OF THE LATERAL DISTRIBUTION OF CHERENKOV
+                        LIGHT FROM COSMIC RAY SHOWERS TO THE DISTANCE OF MAXIMUM
+                        DEVELOPMENT}",
+      journal        = "J. Phys.",
+      volume         = "G9",
+      year           = "1983",
+      pages          = "1433-1452",
+      doi            = "10.1088/0305-4616/9/11/015",
+      SLACcitation   = "%%CITATION = JPAGA,G9,1433;%%"
+}
+
+@article{AlvarezMuniz:2002ne,
+      author         = "Alvarez-Muniz, Jaime and Engel, Ralph and Gaisser, T. K.
+                        and Ortiz, Jeferson A. and Stanev, Todor",
+      title          = "{Hybrid simulations of extensive air showers}",
+      journal        = "Phys. Rev.",
+      volume         = "D66",
+      year           = "2002",
+      pages          = "033011",
+      doi            = "10.1103/PhysRevD.66.033011",
+      eprint         = "astro-ph/0205302",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      reportNumber   = "BA-02-20",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0205302;%%"
+}
+
+@article{Nelson:1985ec,
+      author         = "Nelson, W. Ralph and Hirayama, H. and Rogers, David W.
+                        O.",
+      title          = "{The Egs4 Code System}",
+      year           = "1985",
+      reportNumber   = "SLAC-0265, SLAC-265, SLAC-R-0265, SLAC-R-265",
+      SLACcitation   = "%%CITATION = SLAC-0265;%%"
+}
+
 @article{Apel:2010zz,
       author         = "Apel, W. D. and others",
       title          = "{The KASCADE-Grande experiment}",
@@ -1257,6 +1295,25 @@ year = {1968}
 %%%%% PROCEEDINGS %%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@inproceedings{HillasThinning1,
+      author         = "Hillas, A.M.",
+      booktitle      = "{Proceedings,  17th International Cosmic Ray Conference
+                        (ICRC 1981): Paris, France, 1981}",
+      pages = {193},
+      volume = {8},
+      year           = "1981"
+}
+
+@inproceedings{HillasThinning2,
+      author         = "Hillas, A.M.",
+      booktitle      = "{Proceedings,  19th International Cosmic Ray Conference
+                        (ICRC 1985): La Jolla, USA, 1985}",
+      pages = {155},
+      volume = {1},
+      year           = "1985"
+}
+
+
 @inproceedings{VitorICRC2017,
       author         = "de Souza, V.",
       title          = "{Testing the agreement between the \xmax
@@ -1387,6 +1444,7 @@ of SHINE/NA61 experiment at CERN}",
   address      = "Karlsruhe"
 }
 
+
 @phdthesis{LeeuwenThesis,
   author       = "van~Leeuwen, M.", 
   title        = "{Kaon and open charm production in central lead-lead
@@ -1413,6 +1471,16 @@ Proton-Proton Collisions at 158 GeV}",
   year         = "2002"
   address      = "Budapest"
 }
+
+@mastersthesis{MeurerThesis,
+  author       = "Meurer, C.", 
+  title        = "{Muon production in extensive air
+showers and fixed target accelerator data}",
+  school       = "University of Karlsruhe",
+  year         = "2007"
+  address      = "Karlsruhe"
+}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%% PDG  %%%%%%%%
