--- a/main.tex
+++ b/main.tex
@@ -79,6 +79,7 @@
 \numberwithin{figure}{chapter}
 \usepackage{rviewport}
 \usepackage{comment}
+\usepackage{wrapfig}
 \usepackage{cleveref}
 \crefname{chapter}{Chap.}{Chaps.}
 \crefname{appendix}{App.}{Apps.}
